# SI73_SystemExpert

./: .gitignore
untitled/: CMakeLists.txt  main.cpp
untitled/base_package/bodies/: equation.cpp  hypothese.cpp  mySystem.cpp
untitled/base_package/headers/: equation.h  hypothese.h  mySystem.h
